--- a/views/forms.ejs
+++ b/views/forms.ejs
@@ -1,66 +1,98 @@
-<!doctype html>
-<html>
-<head>
-    <title>Radical</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body id="main">
- <div class="container-fluid">
+<%- include('head'); -%>
 
-    <!--Navbar -->
-    <nav>
-      <a href="/profile">Home</a>
-      <a href="/resources">Organizations</a>
-      <a href="/updates">News</a>
-      <a href="/forms">Forms</a>
-      <a href="/contact">Connect</a>
-      <a href="/logout" class="btn btn-default btn-sm">Logout</a>
-      <div id="google_translate_element"></div>
+<%- include('nav'); -%>
 
-    </nav>
-  <!--/.Navbar -->
-<ul class="messages">
+
+
+
+
+    <div class="container my-5 py-5 z-depth-1">
+
       <% for(var i=0;i <orgUploads.length; i++) {%>
+      <!--Section: Content-->
+      <section class="text-center px-md-5 mx-md-5 dark-grey-text">
 
-        <li class="message">
-          <span><%= orgUploads[i].name %></span>
-          <span><%= orgUploads[i].desc %></span>
+        <!--Grid row-->
+        <div class="row">
 
-      <% } %>
-     </li>
-  </ul>
+          <!--Grid column-->
+          <div class="col-lg-6 mb-lg-0 mb-md-4">
 
-<!---/File Upload----->
-<% if (user.local.organization) { %>
-  <div class="title" id="formUp">
-					<h2>Create A Post</h2>
+            <!--Image-->
+            <div class="view overlay z-depth-1-half">
+              <img src="../<%= orgUploads[i].fileupload %>" class="img-fluid"
+                alt="">
+              <a href="#">
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
 
-          <form class="" action="/forms" method="post">
-            <input type="text" name="name" value="">
-            <!-- <input type="file" name="file" value=""> -->
-            <textarea name="desc" rows="8" cols="80"></textarea>
-            <input type="submit" name="" value="upload">
-          </form>
-					<!-- IMAGE UPLOAD -->
-					<!-- <form action="/forms"  method="post">
-						<!- <input type="text" name="caption" value=""> -->
-						<!-- <input type="file" name="file-to-upload">
-						<textarea name="caption" cols="40" rows="5" placeholder="Tell us about your form!"></textarea>
-						<input type="submit" value="Upload">
-					</form> -->
-				</div>
+          </div>
+          <!--Grid column-->
 
-  <% } %>
+          <!--Grid column-->
+          <div class="col-lg-6 ">
 
-<script src="main.js"></script>
-<script>function googleTranslateElementInit() {
-new google.translate.TranslateElement({
-pageLanguage: 'en'
-}, 'google_translate_element');
-}</script>
-<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+            <h3 class="font-weight-bold"><%= orgUploads[i].name %></h3>
 
-</body>
-</html>
+            <p class="text-muted"><%= orgUploads[i].desc %></p>
+
+            <a class="btn btn-info btn-md waves-effect" href="#" role="button">Download<i
+                class="fa fa-download ml-1"></i></a>
+
+          </div>
+          <!--Grid column-->
+
+        </div>
+        <!--Grid row-->
+
+      </section>
+      <!--Section: Content-->
+        <% } %>
+
+
+        <% if (user.local.organization) { %>
+          <div class="title" id="formUp">
+
+        				<h2>Create A Post</h2>
+
+                <!-- <%= typeof msg != 'undefined'? msg: ''%> -->
+              <form class="uploadForm" action="/forms" method="post" enctype="multipart/form-data">
+                    <input type="text" name="name" value=""></input>
+                    <!-- <input type="file" name="fileupload"></input> -->
+
+              <!-- -------UPLOAD INPUT ----------------->
+                    <div class="input-group">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
+                      </div>
+                      <div class="custom-file">
+                        <input name="fileupload" type="file" class="custom-file-input" id="inputGroupFile01"
+                        aria-describedby="inputGroupFileAddon01">
+                      <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+                    </div>
+                  </div>
+
+                    <div class="form-group purple-border">
+                      <label for="exampleFormControlTextarea4">Colorful border</label>
+                      <textarea name="desc" class="form-control" id="exampleFormControlTextarea4" rows="3"></textarea>
+                    </div>
+
+                    <button type="submit" name="" value="upload">Submit</button>
+                  </form>
+        				</div>
+
+          <% } %>
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+<%- include('footer'); -%>
