--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,23 +1,15 @@
-<!doctype html>
-<html>
-<head>
-    <title>Radical</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
-</head>
+<%- include('head'); -%>
+
 <body class="login" >
 <div id="cointainer"class="container">
 <div class="col-sm-6 col-sm-offset-3">
 
-    <h1><span class="fa fa-sign-in"></span> Login</h1>
+    <h1><span class="fa fa-sign-in"></span> Login</h1> -->
 
-    <% if (message.length > 0) { %>
-        <div class="alert alert-danger"><%= message %></div>
-    <% } %>
+
 
     <!-- LOGIN FORM -->
-    <form action="/login" method="post">
+     <form action="/login" method="post">
         <div class="form-group">
             <label>Email</label>
             <input type="text" class="form-control" name="email">
@@ -32,17 +24,93 @@
 
     <hr>
 
-    <p>
-      <span>Need an account?</span>
-      <br>
-      <span>If you are a Client<a href="/signup"> Signup Here!</a></span>
-      <br>
-      <span>If you are a User<a href="/clientsignup"> Signup Here!</a></span>
-    </p>
-    <p>Or go <a href="/">home</a>.</p>
 
 
 </div>
 </div>
+
+
+
+
+
+<div class="container my-5 px-0 z-depth-1">
+
+  <!--Section: Content-->
+  <section class="p-5 my-md-5 text-center"
+    style="background-image: url(https://i.pinimg.com/originals/32/b8/77/32b877ed4aa7778cc7d43ebb7d95a6f1.png); background-size: cover; background-position: center center;">
+
+    <form  action="/login" method="post" class="my-5 mx-md-5" >
+
+      <div class="row">
+        <div class="col-md-6 mx-auto">
+          <!-- Material form login -->
+          <div class="card">
+
+            <!--Card content-->
+            <div class="card-body">
+
+              <!-- Form -->
+              <form class="text-center" style="color: #757575;" action="#!">
+
+                <!-- Name -->
+                <h3 class="font-weight-bold my-4 pb-2 text-center dark-grey-text">SignUp</h3>
+
+                <!-- Email -->
+                <input type="email" id="defaultSubscriptionFormEmail" class="form-control " placeholder="Email" name="email">
+
+
+                <!---Password--->
+                <input type="password" id="defaultSubscriptionFormPassword" class="form-control mb-4" placeholder="Password"  name="password">
+
+
+                <!---Organization--->
+                <input type="text" id="defaultSubscriptionFormEmail" class="form-control" placeholder="Org/Company"  name="organization">
+
+                <!---Button-------->
+
+                <button type="submit" class="btn btn-outline-blue btn-rounded my-4 waves-effect">SignUp</button>
+
+
+<!-- <button type="button" class="btn blue-gradient btn-margin btn-rounded"> -->
+
+
+                <div class="form-group">
+                  <div class="form-check pl-0">
+                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+                    <label class="form-check-label" for="invalidCheck2">
+
+                      Agree to terms and conditions
+                    </label>
+                    <div class="invalid-feedback">
+                      You must agree before submitting.
+                    </div>
+                  </div>
+                </div>
+
+                <p>Already have an account? <a href="/login">Login</a></p>
+                <p>Or go <a href="/">home</a>.</p>
+
+              </form>
+      <!---End Form ------>
+
+
+
+            </div>
+
+          </div>
+          <!-- Material form login -->
+        </div>
+      </div>
+
+    </form>
+
+  </section>
+  <!--Section: Content-->
+
+
+</div>
+
+
+
 </body>
 </html>
