--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -43,7 +43,7 @@
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2018 Copyright:
-    <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+    <a href="https://mdbootstrap.com/education/bootstrap/"> Carolin Diaz</a>
   </div>
   <!-- Copyright -->
 
@@ -58,12 +58,13 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
-
+<script src="main.js"></script>
 <script>function googleTranslateElementInit() {
 new google.translate.TranslateElement({
 pageLanguage: 'en'
 }, 'google_translate_element');
 }</script>
 <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 </body>
 </html>
